security_groups.tf
# security_groups.tf

# Security Group for Kali Linux (SSH)
resource "aws_security_group" "kali_sg" {
  name        = "kali_sg"
  description = "Security group for Kali Linux instance"
  vpc_id      = aws_vpc.main_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Security Group for Ubuntu (SSH)
resource "aws_security_group" "ubuntu_sg" {
  name        = "ubuntu_sg"
  description = "Security group for Ubuntu instance"
  vpc_id      = aws_vpc.main_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Security Group for Windows Server 2008 (RDP)
resource "aws_security_group" "windows_sg" {
  name        = "windows_sg"
  description = "Security group for Windows Server instance"
  vpc_id      = aws_vpc.main_vpc.id

  ingress {
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
